<resources>
    <string name="app_name">ChangeBooks</string>
    <!-- Menu Drawer Strings -->
    <string name="Different_types_of_books">Жанры литературы</string>
    <string name="a_science_book">научная литература</string>
    <string name="a_humorous_story">комедия</string>
    <string name="a_romance">романтика</string>
    <string name="a_detective_story">детектив</string>
    <string name="an_adventure_novel">приключения</string>
    <string name="a_fiction_book">фантастика</string>
    <string name="a_science_fiction_book">научная фантастика</string>
    <string name="a_drama">драма</string>
    <string name="a_psychology">психология</string>
    <string name="a_horror_story">ужасы</string>
    <string name="a_fairy_tale">детская литература</string>
    <string name="a_war_novel">боевик</string>
    <string name="a_historical_novel">история</string>
    <string name="an_autobiography">автобиография</string>
    <string name="a_biography">биография</string>
    <string name="a_sport">спорт</string>
    <string name="a_classic">классика</string>

    <string name="school_textbooks">Учебники для школы</string>
    <string name="textbooks_for_the_1st_grade">учебники за 1 класс</string>
    <string name="textbooks_for_the_2nd_grade">учебники за 2 класс</string>
    <string name="textbooks_for_the_3rd_grade">учебники за 3 класс</string>
    <string name="textbooks_for_the_4th_grade">учебники за 4 класс</string>
    <string name="textbooks_for_the_5th_grade">учебники за 5 класс</string>
    <string name="textbooks_for_the_6th_grade">учебники за 6 класс</string>
    <string name="textbooks_for_the_7th_grade">учебники за 7 класс</string>
    <string name="textbooks_for_the_8th_grade">учебники за 8 класс</string>
    <string name="textbooks_for_the_9th_grade">учебники за 9 класс</string>
    <string name="textbooks_for_the_10th_grade">учебники за 10 класс</string>
    <string name="textbooks_for_the_11th_grade">учебники за 11 класс</string>

    <string name="ac">Аккаунт</string>
    <string name="ac_sign_up">Регистрация</string>
    <string name="ac_sign_in">Вход</string>
    <string name="ac_sign_out">Выход</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="not_reg">Войдите или зарегестрируйтесь!</string>

    <!-- Sign Dialog -->
    <string name="email_reset_password_was_sent">Reset Email</string>
    <string name="dialog_reset_email_message">Для востановления пароля укажите ваш Email адресс!</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password">Забыли пароль</string>
    <string name="sign_up_error">Неудалось зарегестрироваться</string>
    <string name="sign_in_error">Неудалось войти</string>
    <string name="send_verification_email_error">Неудалось отправить email для потверждения!</string>
    <string name="send_verification_done">На вашу почту была отправленна ссылка для подтверждения вашего аккаунта, пожалуйста подтвердите ваш аккаунт!</string>

    <!-- Sign Dialog -->
    <string name="link_is_done">Email успешно подключен к Google аккаунту!</string>
    <string name="enter_to_g">У вас уже есть аккаунт с этим Email адресом </string>
    <!-- Edit Activity -->
    <string name="select_country">*Выберите страну</string>
    <string name="select_city">*Выберите город</string>

    <!-- Edit Activity -->
    <string name="Main_photo"></string>
    <string name="Second_photo"></string>
    <string name="Third_photo"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_book_name">Название книги</string>
    <string name="edit_discription">Описание</string>
    <string name="edit_phone">Как с вами связаться</string>


</resources>