<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/place_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".act.EditAdsAct">

    <ScrollView
        android:id="@+id/scroolViewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vpimages"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@android:drawable/editbox_background"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.viewpager2.widget.ViewPager2>

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:onClick="onClickGetImages"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/vpimages"
                    app:srcCompat="@android:drawable/ic_menu_edit" />

                <ProgressBar
                    android:id="@+id/pBarLoad"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageButton"
                    app:layout_constraintStart_toStartOf="@+id/vpimages"
                    app:layout_constraintTop_toTopOf="@+id/vpimages" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:gravity="center"
                android:onClick="onClickSelectCountry"
                android:padding="10dp"
                android:text="@string/select_country"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:gravity="center"
                android:onClick="onClickSelectCity"
                android:padding="10dp"
                android:text="@string/select_city"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/edit_book_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextTextPersonName5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/edit_phone"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="5dp"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/edit_discription"
                android:inputType="textMultiLine|textPersonName" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>